# lib_cpp_h5_writer

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  H5ChunkedWriter.cpp  H5ChunkedWriter.hpp  Makefile  README.md  RingBuffer.cpp  RingBuffer.hpp
conda-recipe/: build.sh  meta.yaml
core-buffer/: CMakeLists.txt
core-buffer/include/: BinaryWriter.hpp  BufferUtils.hpp  FastH5Writer.hpp  FastQueue.hpp  JFFileFormat.hpp  SFWriter.hpp  UdpReceiver.hpp  buffer_config.hpp  buffer_utils.hpp  config.hpp  jungfrau.hpp
core-buffer/src/: BinaryWriter.cpp  BufferUtils.cpp  FastH5Writer.cpp  FastQueue.cpp  SFWriter.cpp  UdpReceiver.cpp  UdpRecvModule.cpp
core-buffer/test/: CMakeLists.txt  main.cpp  perf_SFWriter.cpp  test_BinaryWriter.cpp  test_FastH5Writer.cpp  test_FastQueue.cpp  test_SFWriter.cpp  test_UdpReceiver.cpp  test_UdpRecvModule.cpp  test_buffer_utils.cpp  test_main.cpp
core-buffer/test/mock/: udp.hpp
core-writer/: CMakeLists.txt  Makefile
core-writer/conda-recipe/: meta.yaml
core-writer/docs/: diagrams.drawio
core-writer/include/: BufferedWriter.hpp  H5WriteModule.hpp  H5Writer.hpp  MetadataBuffer.hpp  ProcessManager.hpp  RestApi.hpp  RingBuffer.hpp  UdpReceiver.hpp  UdpRecvModule.hpp  WriterManager.hpp  WriterUtils.hpp  ZmqReceiver.hpp  ZmqRecvModule.hpp  config.hpp
core-writer/src/: BufferedWriter.cpp  H5Writer.cpp  MetadataBuffer.cpp  ProcessManager.cpp  RestApi.cpp  RestApi.hpp  RingBuffer.cpp  RingBuffer.hpp  WriterManager.cpp  WriterManager.hpp  ZmqReceiver.cpp  ZmqReceiver.hpp  ZmqRecvModule.cpp  compression.cpp  config.cpp
core-writer/src/compression/: compression.cpp
core-writer/src/module/: H5WriteModule.cpp  UdpRecvModule.cpp  ZmqRecvModule.cpp
core-writer/src/receiver/: UdpReceiver.cpp  ZmqReceiver.cpp  ZmqRecvModule.cpp  compression.cpp
core-writer/src/writer/: BufferedWriter.cpp  H5Format.cpp  H5Writer.cpp  MetadataBuffer.cpp  WriterUtils.cpp  compression.cpp
core-writer/test/: CMakeLists.txt  test_BufferedWriter.cpp  test_H5WriteModule.cpp  test_H5Writer.cpp  test_MetadataBuffer.cpp  test_ProcessManager.cpp  test_UdpReceiver.cpp  test_UdpRecvModule.cpp  test_ZmqReceiver.cpp  test_ZmqRecvModule.cpp  test_client.cpp  test_main.cpp
core-writer/test/mock/: TestH5Format.cpp  stream.cpp  stream.hpp  udp.hpp
csaxs/: CsaxsFormat.cpp  Makefile  csaxs_h5_writer.cpp  test_csaxs_stats_ui.py  test_csaxs_writer.py
csaxs/conda-recipe/: meta.yaml
docs/: .readthedocs.yml  client-api.rst  conf.py  contact.rst  development.rst  flaskserver-api.rst  getting-started.rst  index.rst  installation.rst  modules.rst  pco_diagram.xml  pco_rclient-api.rst  pco_rclient.rst  requirements.txt  server-api.rst  usage.rst
docs/_build/html/: .buildinfo  contact.html  development.html  faq.html  getting-started.html  index.html  installation.html  objects.inv  search.html  searchindex.js  usage.html
docs/_build/html/.doctrees/: contact.doctree  development.doctree  environment.pickle  faq.doctree  getting-started.doctree  index.doctree  installation.doctree  (+1 more)
impl/sf_alvra/: Makefile  alvra_h5_writer.cpp
impl/sf_bernina/: BerninaFormat.cpp  Makefile  bernina_h5_writer.cpp
lib/: Makefile  Notify.cpp
lib/conda-recipe/: build.sh  meta.yaml
lib/include/: crow_all.h  date.h
lib/src/: BufferedWriter.cpp  BufferedWriter.hpp  H5Format.cpp  H5Format.hpp  H5Writer.cpp  H5Writer.hpp  MetadataBuffer.cpp  MetadataBuffer.hpp  PSIWriter.cpp  PSIWriter.hpp  ProcessManager.cpp  ProcessManager.hpp  ProxyManager.cpp  ProxyManager.hpp  RestApi.cpp  RestApi.hpp  RingBuffer.cpp  RingBuffer.hpp  WriterManager.cpp  WriterManager.hpp  ZmqReceiver.cpp  ZmqReceiver.hpp  ZmqSender.cpp  ZmqSender.hpp  config.cpp  config.hpp
lib/src/compression/: compression.cpp  compression.h
lib/test/: test_BufferedWriter.cpp  test_H5Writer.cpp  test_MetadataBuffer.cpp  test_ZmqReceiver.cpp  test_client.cpp  test_main.cpp
sf/: Makefile  SfFormat.cpp  sf_h5_writer.cpp  test_sf_writer.py
sf-buffer/: CMakeLists.txt  jungfrau.hpp  sf_buffer.cpp
sf-buffer/src/: buffer_utils.hpp  sf_buffer.cpp  sf_reader.cpp  sf_replay.cpp  sf_udprecv.cpp  sf_writer.cpp
sf-buffer/test/: CMakeLists.txt  test_buffer_utils.cpp  test_main.cpp  test_sf_replay.cpp
sf-writer/: BufferMultiReader.cpp  BufferMultiReader.hpp  CMakeLists.txt  SFWriter.cpp  SFWriter.hpp  SfFormat.cpp  sf_h5_writer.cpp  test_sf_writer.py
sf/conda-recipe/: meta.yaml
sf_alvra/: AlvraFormat.cpp  Makefile  alvra_h5_writer.cpp
sf_alvra/conda-recipe/: build.sh  meta.yaml
sf_bernina/: BerninaFormat.cpp  Makefile  bernina_h5_writer.cpp
sf_bernina/conda-recipe/: meta.yaml
src/: H5ChunkedWriter.cpp  H5ChunkedWriter.hpp  H5Format.cpp  H5Format.hpp  H5Writer.cpp  H5Writer.hpp  NXmxFormat.cpp  ProcessManager.cpp  ProcessManager.hpp  RestApi.cpp  RestApi.hpp  RingBuffer.cpp  RingBuffer.hpp  WriterManager.cpp  WriterManager.hpp  ZmqReceiver.cpp  ZmqReceiver.hpp  config.cpp  config.hpp  file_format.cpp  h5_file_format.cpp  h5_file_format.hpp  h5_utils.cpp  h5_utils.hpp  h5_zmq_writer.cpp  mx_h5_zmq_writer.cpp  nxsas_format.cpp  rest_interface.cpp  rest_interface.hpp  sf_h5_zmq_writer.cpp
src/format/: NXmxFormat.cpp  SfFormat.cpp
test/: Makefile  h5_write_perf.cpp  test_RingBuffer.cpp  test_ZmqReceiver.cpp  test_main.cpp
tomcat/: Dockerfile  Makefile  TomcatFormat.cpp  conf.py  contact.rst  deployment_server.py  development.rst  docker-entrypoint.sh  docker_img_bp.sh  faq.rst  getting-started.rst  gunicorn.conf  h5_test.py  index.rst  installation.rst  pco_config.json  sheet.rst  source_env  start_server.py  test_simulation_h5_writer.sh  tomcat_env.txt  tomcat_h5_writer.cpp  usage.rst
tomcat/conda-recipe/: build.sh  meta.yaml
tomcat/dockerfile/: Dockerfile  build_test.sh  mflow_env.yml  test_simulation_h5_writer.sh  tomcat_env.yml
tomcat/docs/: conf.py  faq.rst  index.rst  installation.rst  usage.rst
tomcat/test/: consume_writer_stats.py  get_outputframes.py  test_simulation_h5_writer.sh  test_tomcat_writer.py  zmq_script.py  zmq_stream_consumer.py
tomcat_pco/: Makefile
(+4 files in other folders)
